--- a/functions/package.json
+++ b/functions/package.json
@@ -14,15 +14,13 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "axios": "^0.21.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
-    "eslint": "^7.6.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.22.0",
     "firebase-functions-test": "^0.2.0",
     "typescript": "^3.8.0"
   },
