--- a/functions/package.json
+++ b/functions/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cors": "^2.8.5",
+    "express": "^4.17.1",
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.11.0",
+    "symbl-node": "^1.0.13"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.1",
