--- a/functions/package.json
+++ b/functions/package.json
@@ -14,14 +14,17 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/jwt-decode": "^3.1.0",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
-    "symbl-node": "^1.0.13"
+    "symbl-node": "^1.0.13",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
     "firebase-functions-test": "^0.2.0",
