--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,5 @@
 {
   "projects": {
-    "default": "chappie-dev",
-    "dev": "magpie-dev-niks",
-    "production": "external-1-314203"
+    "default": "magpi"
   }
 }
